# RoboticsHomework2-AA2023-24

./: CMakeLists.txt  README.md  package.xml
cfg/: costmap_common_params.yaml  dwa_local_planner_params.yaml  lidar.cfg  local_costmap_params.yaml  move_base_params.yaml
launch/: amcl.launch  amcl.xml  launch.launch  robot_amcl.launch  task1.launch  task2.launch
maps/: map.pgm  map.yaml  robot.inc  world.world
maps/stage/: robot.inc  world.wld
rviz/: config1.rviz  config2.rviz  gmapping_config.rviz
src/: goal_publisher.cpp  lidar_remap.cpp  odom_to_base_link.cpp  odom_to_tf.cpp
