<?xml version="1.0"?>
<package format="2">
  <name>second_project</name>
  <version>0.0.0</version>
  <description>The second_project package</description>

  <maintainer email="federico_rocca@todo.todo">federico_rocca</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>gmapping</build_depend>
  <build_depend>pointcloud_to_laserscan</build_depend>
  <build_depend>rviz</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
    <executable path="src/odom_to_tf"/>
  </export>
</package>
